docs: add documentation for update opening
